Closed Bug 108089 Opened 23 years ago Closed 23 years ago

clicking on a desktop link not loading link in current running browser

Categories

(SeaMonkey :: UI Design, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.7

People

(Reporter: mscott, Assigned: ccarlen)

References

Details

Attachments

(1 file)

I'm using: 2001103003 build. mozilla is set up as my default browser on win2k. If the browser is currently running and I click on an http url from another app, I get the profile manager and it looks like another instance of the app starts up. If I use the 094 branch, we load the url directly in the browser instance which is currently running. I wonder if we are no longer properly detecting the running instance so DDE thinks we need to start up the app again?
worksforme Do you see a splash screen when you click on the html file? If not, then we're detecting the already running process. Are you using Quick Launch? I think Conrad may have been doing something with multi-profile support under Quick Launch and it may be that something is broken there.
No, I'm not using quick launch. My current process is still running. If I choose the same profile as the one I'm currently running it then creates a new browser window and there is still only one moizlla process. I haven't tried picking a different profile yet to see if we attempt to really switch profiles. Good call on the splash screen. I'm not getting the splash screen just the profile manager so your right we are detecting the currently running process.
Keywords: nsbeta1
It must have something to do with multi-profile support for QuickLaunch, which is the reason the profile-manager code has changed recently, I think. Re-assigning to Conrad. BTW, I created another profile and now I see the problem.
Assignee: law → ccarlen
Component: XP Apps → Profile Manager BackEnd
QA Contact: sairuh → gbush
While introduced by multiple profile support (my fault), it's not a profile back end problem. I think this is something in nsNativeAppSupportWin. Component should stay XPApps.
Status: NEW → ASSIGNED
Component: Profile Manager BackEnd → XP Apps
Target Milestone: --- → mozilla0.9.7
Attached patch patchSplinter Review
The old logic using mDidProfileStartup was wrong. Comments are in the patch.
Comment on attachment 56878 [details] [diff] [review] patch sr=mscott in case you are in need of a sr for this change =).
Attachment #56878 - Flags: superreview+
Bill, can you r= the patch?
Comment on attachment 56878 [details] [diff] [review] patch r=law
Attachment #56878 - Flags: review+
*** Bug 110492 has been marked as a duplicate of this bug. ***
*** Bug 101371 has been marked as a duplicate of this bug. ***
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified on mozilla build 2001121403
Status: RESOLVED → VERIFIED
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: