Bug 108089 - clicking on desktop link brings up profile picker when profile is already chosen. r=law/sr=mscott